[project]
name = "bun-wheel"
version = "0.1.0"
description = "Unofficial Bun wheel"
readme = "README.md"
authors = [
    { name = "Agil Mammadov", email = "mammadovagil@proton.me" }
]
requires-python = ">=3.14"
dependencies = []

[project.urls]
Homepage = "https://github.com/stiermid/bun-wheel"
Repository = "https://github.com/stiermid/bun-wheel"
"Bug Tracker" = "https://github.com/stiermid/bun-wheel/issues"

[project.scripts]
bun = "bun_wheel:exec_bun"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
