[project]
name = "bun-wheel"
version = "1.3.14"
description = "Unofficial Bun wheel"
readme = "README.md"
authors = [
    { name = "Agil Mammadov", email = "mammadovagil@proton.me" }
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/stiermid/bun-wheel"
Repository = "https://github.com/stiermid/bun-wheel"
"Bug Tracker" = "https://github.com/stiermid/bun-wheel/issues"

[project.scripts]
bun = "bun_wheel:exec_bun"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path="hatch_build.py"

[dependency-groups]
dev = [
    "hatch>=1.16.5",
]

[tool.cibuildwheel]
build = ["cp313-*"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "ARM64"]
