[project]
name = "bun-wheel"
version = "1.3.14.post1"
description = "Unofficial Bun wheel"
readme = "README.md"
license = "LGPL-2.1-or-later"
license-files = ["LICENSE", "LICENSES/*"]
authors = [
    { name = "Agil Mammadov", email = "mammadovagil@proton.me" }
]
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/stiermid/bun-wheel"
Repository = "https://github.com/stiermid/bun-wheel"
"Bug Tracker" = "https://github.com/stiermid/bun-wheel/issues"

[project.scripts]
bun = "bun_wheel:exec_bun"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path="hatch_build.py"

[dependency-groups]
dev = [
    "hatch>=1.16.5",
    "ruff>=0.15.15",
]

[tool.cibuildwheel]
build = ["cp313-*"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "ARM64"]

[tool.ruff.lint]
extend-select = [
    "UP", # pyugrade
    "D", # pydocstyle
    "RUF", # ruff
    "TCH", # flake8-tpye-checking
]
